Crawl ptt hotboard list and display

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Board item color-->
+    <color name="board_item_bg">#222831</color>
+    <color name="board_item_text_color">#00adb5</color>
+    <color name="board_item_category_text_color">#eeeeee</color>
+    <color name="board_item_popularity_text_color">#393e46</color>
+    <!-- backup color: #5d4b60 #84a97e-->
 </resources>
