--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="navigation_drawer_width">300dp</dimen>
+    <dimen name="board_item_padding">5dp</dimen>
+    <dimen name="board_item_category_layout_padding">8dp</dimen>
+    <dimen name="board_item_category_size">21.5sp</dimen>
+    <dimen name="board_item_name_size">20sp</dimen>
+    <dimen name="board_item_title_size">16sp</dimen>
+    <dimen name="board_item_popularity_size">13.5sp</dimen>
 </resources>
