--- a/app/src/main/res/layout/hotboard_activity.xml
+++ b/app/src/main/res/layout/hotboard_activity.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/board_item_bg"
-    tools:context=".MainActivity">
+    tools:context=".ui.hotboard.HotBoardActivity">
 
     <include
         android:id="@+id/toolbar"
@@ -17,10 +17,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:scrollbars="vertical" />
+        android:layout_below="@+id/toolbar" />
+
 </RelativeLayout>
