--- a/app/src/main/res/layout/board_item.xml
+++ b/app/src/main/res/layout/board_item.xml
@@ -57,7 +57,7 @@
 
     </LinearLayout>
 
-    <com.example.tonyyang.tonyptt.ui.hotboard.HotBoardPopularityView
+    <com.tonyyang.typtt.ui.hotboard.HotBoardPopularityView
         android:id="@+id/popularity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
