--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,6 @@
     <style name="BoardItem" />
     <style name="BoardItem.Main">
         <item name="android:background">@color/board_item_bg</item>
-        <item name="android:padding">@dimen/board_item_padding</item>
-    </style>
-    <style name="BoardItem.CategoryLayout">
-        <item name="android:padding">@dimen/board_item_category_layout_padding</item>
     </style>
     <style name="BoardItem.Text">
         <item name="android:textColor">@color/board_item_text_color</item>
@@ -22,6 +18,7 @@
     <style name="BoardItem.Text.Category">
         <item name="android:textColor">@color/board_item_category_text_color</item>
         <item name="android:textSize">@dimen/board_item_category_size</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="BoardItem.Text.Name">
         <item name="android:textSize">@dimen/board_item_name_size</item>
