--- a/app/src/main/res/layout/board_item.xml
+++ b/app/src/main/res/layout/board_item.xml
@@ -1,69 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/BoardItem.Main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/category_layout"
-        style="@style/BoardItem.CategoryLayout"
+    <TextView
+        android:id="@+id/category"
+        style="@style/BoardItem.Text.Category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:ems="1"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="籃球" />
 
-        <TextView
-            android:id="@+id/category"
-            style="@style/BoardItem.Text.Category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="1"
-            android:textStyle="bold"
-            tools:text="籃球" />
-
-    </android.support.constraint.ConstraintLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <TextView
+        android:id="@+id/name"
+        style="@style/BoardItem.Text.Name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/title"
         app:layout_constraintEnd_toStartOf="@+id/popularity"
-        app:layout_constraintStart_toEndOf="@+id/category_layout"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toEndOf="@+id/category"
+        app:layout_constraintTop_toTopOf="@+id/category"
+        tools:text="NBA" />
 
-        <TextView
-            android:id="@+id/name"
-            style="@style/BoardItem.Text.Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="NBA" />
-
-        <TextView
-            android:id="@+id/title"
-            style="@style/BoardItem.Text.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="◎[NBA] 2017-18總冠軍 金州勇士隊" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/title"
+        style="@style/BoardItem.Text.Title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        app:layout_constraintBottom_toBottomOf="@+id/category"
+        app:layout_constraintEnd_toEndOf="@+id/name"
+        app:layout_constraintStart_toStartOf="@+id/name"
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        tools:text="◎[NBA] 2017-18總冠軍 金州勇士隊" />
 
     <com.tonyyang.typtt.ui.hotboard.HotBoardPopularityView
         android:id="@+id/popularity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -71,4 +63,4 @@
         tools:popularity_number="99"
         tools:src="@drawable/ic_popular" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
