--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,12 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-    <style name="MainPage">
-        <item name="android:background">@color/main_page_bg</item>
+        <item name="android:windowBackground">@color/bg_color</item>
     </style>
     <style name="BoardItem" />
-    <style name="BoardItem.Main">
-        <item name="android:background">@color/board_item_bg</item>
-    </style>
     <style name="BoardItem.Text">
         <item name="android:textColor">@color/board_item_text_color</item>
     </style>
