--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,9 @@
     <dimen name="board_item_category_size">21.5sp</dimen>
     <dimen name="board_item_name_size">20sp</dimen>
     <dimen name="board_item_title_size">16sp</dimen>
+    <dimen name="board_item_pinned_size">16sp</dimen>
+    <dimen name="board_item_author_size">14sp</dimen>
+    <dimen name="board_item_mark_size">16sp</dimen>
+    <dimen name="board_item_date_size">16sp</dimen>
     <dimen name="board_item_popularity_size">13.5sp</dimen>
 </resources>
