--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,12 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/bg_color</item>
     </style>
-
     <style name="BoardItem" />
-    <style name="BoardItem.Main">
-        <item name="android:background">@color/board_item_bg</item>
-    </style>
     <style name="BoardItem.Text">
         <item name="android:textColor">@color/board_item_text_color</item>
     </style>
@@ -25,6 +20,18 @@
     </style>
     <style name="BoardItem.Text.Title">
         <item name="android:textSize">@dimen/board_item_title_size</item>
+    </style>
+    <style name="BoardItem.Text.Pinned">
+        <item name="android:textSize">@dimen/board_item_pinned_size</item>
+    </style>
+    <style name="BoardItem.Text.Author">
+        <item name="android:textSize">@dimen/board_item_author_size</item>
+    </style>
+    <style name="BoardItem.Text.Mark">
+        <item name="android:textSize">@dimen/board_item_date_size</item>
+    </style>
+    <style name="BoardItem.Text.Date">
+        <item name="android:textSize">@dimen/board_item_date_size</item>
     </style>
     <style name="BoardItem.Text.Popularity">
         <item name="android:textColor">@color/board_item_popularity_text_color</item>
