Add webview page

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,5 +33,25 @@
             android:name="url"
             android:defaultValue="null"
             app:argType="string" />
+        <action
+            android:id="@+id/action_boardFragment_to_articleFragment"
+            app:destination="@id/articleFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/articleFragment"
+        android:name="com.tonyyang.typtt.ui.article.ArticleFragment"
+        tools:layout="@layout/fragment_article">
+        <argument
+            android:name="article_title"
+            android:defaultValue="null"
+            app:argType="string" />
+        <argument
+            android:name="article_url"
+            android:defaultValue="null"
+            app:argType="string" />
     </fragment>
 </navigation>
