refactor: upgrade versions and optimize code

--- a/app/src/main/res/layout/view_popularity.xml
+++ b/app/src/main/res/layout/view_popularity.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/icon_iv"
+        android:id="@+id/iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_popular"
@@ -19,7 +19,7 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/number_tv"
+        android:id="@+id/tv_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
