--- a/app/src/main/res/layout/item_board.xml
+++ b/app/src/main/res/layout/item_board.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/like"
+        android:id="@+id/tv_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -18,13 +18,13 @@
         android:minEms="1"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/title"
+        app:layout_constraintEnd_toStartOf="@+id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/tv_title"
         style="@style/BoardItem.Text.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -32,14 +32,14 @@
         android:layout_marginEnd="16dp"
         android:ellipsize="end"
         android:maxLines="2"
-        app:layout_constraintBottom_toTopOf="@+id/author"
+        app:layout_constraintBottom_toTopOf="@+id/tv_author"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/like"
+        app:layout_constraintStart_toEndOf="@+id/tv_like"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="[問卦] 請問TYPTT各位覺得使用體驗如何呢？如果要打分數會打幾分呢？" />
 
     <TextView
-        android:id="@+id/pinned"
+        android:id="@+id/tv_pinned"
         style="@style/BoardItem.Text.Pinned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,14 +47,14 @@
         android:text="★"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/author"
-        app:layout_constraintStart_toStartOf="@+id/title"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintEnd_toStartOf="@+id/tv_author"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
         tools:ignore="HardcodedText"
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/author"
+        android:id="@+id/tv_author"
         style="@style/BoardItem.Text.Author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -65,23 +65,23 @@
         android:maxLines="1"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/mark"
-        app:layout_constraintStart_toEndOf="@+id/pinned"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintEnd_toStartOf="@+id/tv_mark"
+        app:layout_constraintStart_toEndOf="@+id/tv_pinned"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
         tools:text="tonyyang" />
 
     <TextView
-        android:id="@+id/mark"
+        android:id="@+id/tv_mark"
         style="@style/BoardItem.Text.Mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        app:layout_constraintBottom_toBottomOf="@+id/date"
-        app:layout_constraintEnd_toStartOf="@+id/date"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
+        app:layout_constraintEnd_toStartOf="@+id/tv_date"
         tools:text="M" />
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/tv_date"
         style="@style/BoardItem.Text.Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
